# EmailsSpammer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md
app/: Dockerfile  celerybeat-schedule.db  docker-compose.yaml  pyproject.toml
app/contact/: admin.py  forms.py  models.py  service.py  tasks.py  urls.py  views.py
app/contact/migrations/: 0001_initial.py
app/contact/templates/main/: contact.html
app/main/: celery.py  settings.py  urls.py  wsgi.py
